src/test/ui/parser/import-from-path.rs
// compile-flags: -Z parse-only

// error-pattern:expected
use foo::{bar}::baz
